--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_complain.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_complain.xml
@@ -132,13 +132,6 @@
                     />
             </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical"
-                >
 
 
                 <LinearLayout
@@ -170,7 +163,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentTop="true">
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -189,7 +183,7 @@
 
                 </LinearLayout>
 
-            </RelativeLayout>
+
 
         </LinearLayout>
         <View
