--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_chengjiaokehu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_chengjiaokehu.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
+        android:visibility="gone"
         >
 
         <Button
@@ -82,13 +83,32 @@
 
     </LinearLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/work_viewpager_over_client"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/forward_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_marginTop="10dp"
+        android:background="#ffffff"
+        android:scrollbars="none"
+        app:tabBackground="@android:color/transparent"
+        app:tabIndicatorColor="#4393f9"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#4393f9"
+        app:tabTextAppearance="@style/CubeTabLayoutTextStyle"
+        app:tabTextColor="#26252a"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#f2f6f9"
+        />
 
-    </android.support.v4.view.ViewPager>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/forward_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        />
 
 
 
