--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_add_genjinjilu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_add_genjinjilu.xml
@@ -72,6 +72,7 @@
                         android:textSize="15sp"
                         />
                     <TextView
+                        android:id="@+id/tv_kehumingcheng"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="8"
@@ -149,6 +150,7 @@
                         android:textSize="16sp"
                         />
                     <TextView
+                        android:id="@+id/tv_genjingren"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="8.5"
