--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_dongtailiebiao.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_dongtailiebiao.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:visibility="gone"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,6 +113,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:visibility="gone"
         >
         <LinearLayout
             android:layout_width="match_parent"
