--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.facebook.drawee.view.SimpleDraweeView
+                <ImageView
                     android:id="@+id/house_imageview_项目图册"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -29,72 +29,96 @@
 
             </LinearLayout>
 
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp">
+
+
+                <TextView
+                    android:id="@+id/tv_project_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:text="FUNK自由青年公寓    "
+                    android:textColor="@color/chunhei"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_sale_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="17dp"
+                    android:text="在售"
+                    android:textColor="@color/qianlan"
+                    android:textSize="14sp" />
+
+
+            </RelativeLayout>
             <!--楼盘-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingTop="10dp">
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        >
-
-                        <TextView
-                            android:id="@+id/tv_project_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="FUNK自由青年公寓    "
-                            android:textColor="@color/chunhei"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:id="@+id/tv_sale_state"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="在售"
-                            android:textColor="@color/qianlan"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
+                    <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:src="@drawable/ic_residential2" />
+
+                    <LinearLayout
                         android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="关注人数："
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/tv_num"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
-                            android:text="关注人数："
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginEnd="5dp"
                             android:text="23"
                             android:textColor="@color/chunhei"
                             android:textSize="16sp" />
 
                         <ImageButton
+                            android:id="@+id/im_dianzan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentTop="true"
                             android:background="@android:color/transparent"
                             android:src="@drawable/ic_focus_2" />
                     </LinearLayout>
+
                 </RelativeLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -103,27 +127,8 @@
                     android:padding="10dp">
 
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp">
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingLeft="5dp"
-                                android:paddingRight="5dp"
-                                android:src="@drawable/ic_residential2" />
-                        </LinearLayout>
-
-                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -154,7 +159,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="交房时间："
+                            android:text="开发商："
                             android:textSize="15sp" />
 
                         <TextView
@@ -191,7 +196,7 @@
                             android:textSize="18sp" />
                     </LinearLayout>
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -204,11 +209,19 @@
                             android:src="@drawable/ic_residential" />
 
                         <TextView
+                            android:layout_marginLeft="20dp"
                             android:id="@+id/tv_absolute_address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="高新区-天府五街230号" />
-                    </LinearLayout>
+                        <TextView
+                            android:id="@+id/tv_loupanxiangqing"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="查看更多 >>"/>
+                    </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
 
@@ -222,7 +235,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -366,6 +380,7 @@
                             android:textSize="20sp" />
 
                         <TextView
+                            android:textColor="@color/qianlan"
                             android:id="@+id/content_tv10"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -384,10 +399,11 @@
                 </RelativeLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_dongtaixiangqing"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:id="@+id/content_tv11"
@@ -490,14 +506,14 @@
                             android:layout_height="match_parent"
                             android:scrollbars="none">
 
-                           <android.support.v7.widget.RecyclerView
-                               android:id="@+id/re_huxing"
-                               android:layout_width="match_parent"
-                               android:layout_height="match_parent"
-                               android:layout_centerVertical="true"
-                               android:scrollbars="none">
+                            <android.support.v7.widget.RecyclerView
+                                android:id="@+id/re_huxing"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_centerVertical="true"
+                                android:scrollbars="none">
 
-                           </android.support.v7.widget.RecyclerView>
+                            </android.support.v7.widget.RecyclerView>
                         </HorizontalScrollView>
 
 
