--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/househuxing_activity.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/househuxing_activity.xml
@@ -1,55 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="15dp"
     android:id="@+id/speed_view"
     android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/im_huxing1"
-            android:layout_width="155dp"
-            android:layout_height="155dp"
-            android:layout_marginTop="21dp"
-            android:src="@drawable/ic_launcher_background" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv_house_type_name"
+        android:orientation="vertical"
+        android:padding="10dp"
+        >
+
+        <ImageView
+            android:id="@+id/im_huxing1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="A型"
-            android:textColor="@color/huxing"/>
-        <TextView
-            android:id="@+id/tv_property_area"
-            android:layout_marginLeft="70dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            android:gravity="center_horizontal"
+            >
+            <TextView
+                android:id="@+id/tv_house_type_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A型公寓"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="—"
+                />
+            <TextView
+                android:id="@+id/tv_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="102㎡"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/huxing"
-            android:text="102m²"/>
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_gravity="center_horizontal"
+            >
+            <TextView
+                android:id="@+id/tv_house_type"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="三室两厅两卫"
+                android:textSize="15sp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_gravity="center_horizontal"
+            >
+            <TextView
+                android:id="@+id/tv_sale_state1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="在售:"
+                android:textSize="15sp"
+                android:textColor="@color/qianlan"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/tv_house_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@color/huxing"
-        android:text="3室1厅1卫"
-        android:layout_marginTop="19dp"/>
-    <TextView
-        android:id="@+id/tv_sale_state1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:textColor="@color/sale"
-        android:text="在售"
-        />
 
 </LinearLayout>
