--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_loupanxiangce.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_loupanxiangce.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/chunhei"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -63,6 +63,7 @@
         android:textColor="@color/qianhui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         />
         <TextView
             android:id="@+id/house_text_全部图"
@@ -76,6 +77,14 @@
     </RelativeLayout>
 </LinearLayout>
 
+    <android.support.design.widget.TabLayout
+        android:layout_alignParentBottom="true"
+        android:id="@+id/xc_tablaout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabTextColor="@android:color/white"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,6 +94,7 @@
         android:paddingRight="10dp"
         android:paddingBottom="20dp"
         android:layout_alignParentBottom="true"
+        android:visibility="gone"
         >
 
         <Button
