--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_loudongxiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_loudongxiangqing.xml
@@ -15,7 +15,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/test"
+            android:visibility="gone"
             />
+        <WebView
+            android:id="@+id/wv_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </WebView>
 
     <LinearLayout
         android:layout_width="match_parent"
