--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_loupanxinxi.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_loupanxinxi.xml
@@ -819,6 +819,7 @@
                 android:orientation="horizontal"
                 >
 
+
                 <LinearLayout
                     android:id="@+id/ll_yushou"
                     android:layout_width="wrap_content"
@@ -835,13 +836,6 @@
                         android:textSize="16sp"
                         />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="成房预售中心"
-                        android:textColor="@color/chunhei"
-                        android:textSize="16sp"
-                        />
                 </LinearLayout>
 
                 <ImageView
@@ -852,7 +846,8 @@
                     />
 
                 <LinearLayout
-                    android:id="@+id/ll_fazhengtime"
+                    android:gravity="right"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="10dp"
@@ -866,6 +861,14 @@
                         android:text="发证时间："
                         android:textSize="16sp"
                         />
+                    <LinearLayout
+                        android:layout_marginRight="5dp"
+                        android:orientation="vertical"
+                        android:id="@+id/ll_fazhengtime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -873,7 +876,9 @@
                         android:text="2017-12-12"
                         android:textColor="@color/chunhei"
                         android:textSize="16sp"
+                        android:visibility="gone"
                         />
+
                 </LinearLayout>
 
 
