--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
@@ -20,12 +20,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/house_imageview_项目图册"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_launcher_background" />
+                    android:layout_height="wrap_content">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp">
+
+                </android.support.v4.view.ViewPager>
+                    <TextView
+                        android:id="@+id/tv_shuzi"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="80dp"
+                        android:text="1/8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </FrameLayout>
 
             </LinearLayout>
 
@@ -550,11 +562,16 @@
                     android:text="周边及配套"
                     android:textColor="@color/chunhei"
                     android:textSize="20sp" />
-
-                <ImageView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_launcher_background" />
+                    android:layout_height="wrap_content">
+
+                <com.baidu.mapapi.map.MapView
+                    android:id="@+id/mmap"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                     />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -655,10 +672,12 @@
                     android:src="@drawable/ic_line"></ImageView>
 
                 <LinearLayout
+                    android:id="@+id/ll_pipeikehu1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="10dp">
+                    android:padding="10dp"
+                    android:visibility="gone">
 
 
                     <LinearLayout
@@ -804,7 +823,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:paddingRight="5dp"
-                                            android:text="购买意向度："
+                                            android:text="购买紧迫度："
                                             android:textSize="13sp" />
 
                                         <TextView
@@ -875,6 +894,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_pipeikehu2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -1024,7 +1044,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:paddingRight="5dp"
-                                            android:text="购买意向度："
+                                            android:text="购买紧迫度："
                                             android:textSize="13sp" />
 
                                         <TextView
