--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_shensuzhong_xiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_shensuzhong_xiangqing.xml
@@ -9,12 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="20dp"
         >
         <ImageButton
             android:id="@+id/work_button_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_leftarrow"
@@ -38,7 +37,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="10"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -1363,10 +1363,13 @@
 
 
             </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="50dp"
                 >
 
                 <Button
@@ -1382,9 +1385,7 @@
 
             </RelativeLayout>
 
-        </LinearLayout>
 
-    </ScrollView>
 
 
     </LinearLayout>
